@@ -30,8 +30,8 @@ repository use the same S3 remote is easy:
 Now the remote can be used like any other remote.
 
 	# git annex copy my_cool_big_file --to cloud
-	copy my_cool_big_file (gpg) (checking cloud...) (to cloud...) ok
+	copy my_cool_big_file (checking cloud...) (to cloud...) ok
 	# git annex move video/hackity_hack_and_kaxxt.mov --to cloud
-	move video/hackity_hack_and_kaxxt.mov (gpg) (checking cloud...) (to cloud...) ok
+	move video/hackity_hack_and_kaxxt.mov (checking cloud...) (to cloud...) ok
 
 See [[special_remotes/Amazon_S3]] for details.
