@@ -4,6 +4,9 @@ git-annex (0.20110428) UNRELEASED; urgency=low
   * Add hook special remotes.
   * Avoid crashing when an existing key is readded to the annex.
   * unused: Now also lists files fsck places in .git/annex/bad/
+  * S3: When encryption is enabled, the Amazon S3 login credentials
+    are stored, encrypted, in .git-annex/remotes.log, so environment
+    variables need not be set after the remote is initialized.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 28 Apr 2011 14:38:16 -0400
 
